# GateServer

./: .gitignore  CMakeLists.txt  GateServer.sln  README.md  vcpkg.json
GateServer/: AsioIOServicePool.cpp  AsioIOServicePool.h  CServer.cpp  CServer.h  ConfigMgr.cpp  ConfigMgr.h  GateServer.cpp  GateServer.vcxproj  GateServer.vcxproj.filters  HttpConnection.cpp  HttpConnection.h  LogicSystem.cpp  LogicSystem.h  MySqlDao.cpp  MySqlDao.h  MySqlMgr.cpp  MySqlMgr.h  PropertySheet.props  RedisMgr.cpp  RedisMgr.h  StatusGrpcClient.h  VerifyGrpcClient.cpp  VerifyGrpcClient.h  config.ini  const.h
VerifyServer/: package-lock.json  package.json  server.js
include/: HttpConnection.h  MySqlMgr.h  RedisMgr.h  VerifyGrpcClient.h
src/: CServer.cpp  HttpConnection.cpp  MySqlMgr.cpp  StatusGrpcClient.cpp  VerifyGrpcClient.cpp
